--- a/src/App.less
+++ b/src/App.less
@@ -1,12 +1,31 @@
 .App {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    background: #e6e6e6;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background: #e6e6e6;
 
-    ul{
-        height: 100%;
-        width: 100%;
-        background: aqua;
+  ul {
+    width: 100%;
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+
+    li {
+      min-width: 30px;
+      line-height: 50px;
+      padding: 0 8px;
+
+      a {
+        text-decoration: none;
+        color: #409EFF;
+      }
+
+      a:hover {
+        color: #356cc1;
+        background: #c6ccd5;
+      }
     }
+  }
 }
